# telemutter

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  run_everything.py
.github/workflows/: avr.yml  cross.yml  rust.yml
docs/: PROTOCOL_ENVELOPE_v0.1.0.md  TEST_VECTORS_v0.1.0.md
python/: README.md
python/scripts/: udp_interop_peer.py
python/telemutter_py/: __init__.py  envelope.py
python/tests/: test_envelope.py  test_negative_vectors.py  test_udp_channel.py  test_vectors.py
telemutter/: Cargo.toml
telemutter-avr/: Cargo.toml  Dockerfile
telemutter-avr/.cargo/: config.toml
telemutter-avr/src/: lib.rs  main.rs
telemutter-cortexm/: Cargo.toml  build.rs
telemutter-cortexm/.cargo/: config.toml
telemutter-cortexm/src/: lib.rs  main.rs
telemutter/src/: lib.rs
telemutter/tests/: adversarial_wire.rs  common.rs  golden_negative_vectors.rs  golden_vectors.rs  interop_udp.rs  udp_channel.rs
